--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.48.2",
+    "react": "^16.0.0",
+    "react-native": "^0.50.0",
     "react-native-elements": "^0.16.0",
-    "react-native-vector-icons": "^4.4.0",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-native-vector-icons": "^4.4.2",
+    "react-navigation": "^1.0.0-beta.17"
   },
   "devDependencies": {
     "babel-jest": "21.0.2",
