Finished implementing searchBar

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "loadash": "^1.0.0",
+    "query-string": "^5.0.1",
     "react": "^16.0.0",
     "react-native": "^0.50.0",
     "react-native-elements": "^0.16.0",
